# e-monitoring

./: .env  .env.example  .gitignore  Dockerfile.backend  README.md  activity_logs.json  audit_report.json  docker-compose.prod.yml  docker-compose.yml  install-service.js  nexusmonitor_audit.py  package-lock.json  package.json  server.js  setup.js  test-vms.js  uninstall-service.js
data/: acked_alerts.json  (+7 more)
nexusmonitor/: .env.example  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_all.ps1  run_all.sh
nexusmonitor/.github/workflows/: backend-ci.yml  ci.yml  docker-publish.yml  frontend-ci.yml  security-scan.yml
nexusmonitor/apps/api/: Dockerfile  main.py
nexusmonitor/apps/api/actions/: router.py  schemas.py
nexusmonitor/apps/api/alerts/: router.py  schemas.py  websocket.py
nexusmonitor/apps/api/auth/: api_keys.py  dependencies.py  jwt.py  ldap.py  mfa.py  rotation.py  router.py  saml.py  schemas.py  service.py
nexusmonitor/apps/api/correlation/: router.py  schemas.py
nexusmonitor/apps/api/health/: router.py
nexusmonitor/apps/api/metrics/: query_builder.py  router.py  schemas.py  service.py
nexusmonitor/apps/collector/: ingest_router.py  kafka_producer.py  main.py  otlp_parser.py  prom_remote_write_parser.py
nexusmonitor/apps/web/: Dockerfile  package.json  vite.config.ts
nexusmonitor/docs/: api.md  architecture.md
nexusmonitor/infra/helm/: Chart.yaml  values.yaml
nexusmonitor/infra/monitoring/: prometheus-servicemonitor.yaml
nexusmonitor/infra/terraform/: eks.tf  main.tf  rds.tf  redis.tf  variables.tf
(+203 files in other folders)
